--- a/miniprogram/miniprogram/pages/2_2team/team.wxml
+++ b/miniprogram/miniprogram/pages/2_2team/team.wxml
@@ -1,2 +1,49 @@
 <!--pages/2_2team/team.wxml-->
-<text>pages/2_2team/team.wxml</text>
+
+<text class="titleform" style="position: relative; left: 36rpx; top: 24rpx">Project</text>
+<view wx:if="{{!searchResult}}">
+  <view class='screen' style="width: 300rpx; height: 75rpx; display: flex; box-sizing: border-box; left: 380rpx; top: 15rpx; position: fixed">
+    <view class='screen-name {{screenColor?"screen-color":""}}' bindtap='screenShow' style="width: 300rpx; height: 87rpx; display: flex; box-sizing: border-box; left: 43rpx; top: 0rpx">
+      <text style="width: 300rpx; height: 87rpx; display: block; box-sizing: border-box">{{screen}}</text>
+      <text class='iconfont iconsanjiaoxing1 {{screenFlag?"iconfontAnimation":""}}'></text>
+    </view>
+  </view>
+  <!-- 点击筛选按钮后展示的下拉框 -->
+  <!-- 下拉框透明背景 -->
+  <view class='drop-down-background' hidden='{{!screenFlag}}' bindtouchstart='handletouchtart'></view>
+  <view class='drop-down-flex'>
+    <view wx:for="{{screenDown.screenDown}}" wx:key="this" class='drop-down {{screenDown.screen==index?"down-active":""}} {{screenFlag?"down-show":""}}' data-item='{{item}}' data-index='{{index}}' bindtap='screenChoice'>
+      <text>{{item}}</text>
+      <text class='iconfont iconbianzu5' wx:if='{{screenDown.screen==index?true:false}}'></text>
+    </view>
+  </view>
+</view>
+<block wx:if="{{screenDown.screen==0}}">
+  <text class="subtitleform" style="position: relative; left: 36rpx; top: 56rpx">My project</text>
+  <view wx:for="{{groupnumber}}" wx:key="index">
+    <view class="groupcard" style="position: relative; left: 52rpx; top: 104rpx">
+        <image class="cardimage" style="position:relativey;left: 52rpx; top: 104rpx"></image>
+    </view>
+  </view>  
+</block>
+<block wx:if="{{screenDown.screen==1}}">
+  <text class="subtitleform" style="position: relative; left: 36rpx; top: 2rpx">Only my project</text>
+  <view wx:for="{{groupnumber}}" wx:key="index">
+    <view class="groupcard" style="position: relative; left: 52rpx; top: 104rpx">
+        <image class="cardimage" style="position:relativey;left: 52rpx; top: 104rpx"></image>
+    </view>
+  </view>
+</block>
+<block wx:if="{{screenDown.screen==2}}">
+  <text class="subtitleform" style="position: relative; left: 36rpx; top: 2rpx">Only my follow</text>
+  <view wx:for="{{groupnumber}}" wx:key="index">
+    <view class="groupcard" style="position: relative; left: 52rpx; top: 104rpx">
+        <image class="cardimage" style="position:relativey;left: 52rpx; top: 104rpx"></image>
+    </view>
+  </view>
+</block>
+
+
+
+
+
