--- a/miniprogram/miniprogram/pages/2_4mine/mine.wxss
+++ b/miniprogram/miniprogram/pages/2_4mine/mine.wxss
@@ -1,5 +1,18 @@
 /* pages/2_4mine/mine.wxss */
 
+.setting{
+  background-color: rgb(219, 204, 255);
+  top: 2%;
+  right: 2%;
+  width: 28% !important;
+  height: 7% !important;
+  position: absolute;
+  z-index: 3;
+  text-align: center;
+  font-size: x-small;
+}
+
+
 .myimage{
   left: 20px;
   top: 20px;
@@ -10,7 +23,7 @@
 }
 
 .myname{
-  left: 25px;
+  left: 28px;
   top: -15px;
   position: relative;
   z-index: -1;
@@ -24,8 +37,16 @@
   z-index: -1;
 }
 
+.mysubscription{
+  top: -41%;
+  right: 19%;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+}
+
 .mycollection{
-  top: 150px;
+  top: 25%;
   left: 20px;
   position: absolute;
 
@@ -34,25 +55,14 @@
 .collections{
   top: 200px;
   left: 20px;
+  width: 100%;
+  height: 100%;
   position: relative;
   z-index: 2;
 }
 
 .singlecollection{
   top: 150px;
-  left: 30px;
-  position: relative;
-  z-index: 2;
-}
-
-.singleuserimage{
-  top: 5px;
-  position: relative;
-  z-index: 2;
-}
-
-.singleusername{
-  top: 5px;
   left: 30px;
   position: relative;
   z-index: 2;
