--- a/miniprogram/miniprogram/pages/2_1home/home.wxml
+++ b/miniprogram/miniprogram/pages/2_1home/home.wxml
@@ -1,2 +1,42 @@
-<!--pages/home/home.wxml-->
-<text>pages/home/home.wxml</text>
+<!--搜索-->
+<view class='page_row' bindtap="suo">
+    <view class="search">
+      <view class="df search_arr">
+        <icon class="searchcion" size='20' type='search'></icon>
+        <input class="" disabled placeholder="请输入关键字" value="{{searchValue}}"/>
+      </view>
+    </view>
+    <view class='sousuo'>搜索</view>
+  </view>
+<!--轮播图-->
+
+<swiper class="swiper" indicator-dots="true" autoplay="true" interval="5000" duration="1000">  
+      <block wx:for="{{movies}}" wx:for-index="index">  
+        <swiper-item>  
+          <image src="{{item.url}}" class="slide-image" mode="aspectFill"/>  
+        </swiper-item>  
+      </block>  
+    </swiper>  
+
+
+
+<!--guideline-->
+<button style="width:700rpx;height: 550rpx;padding:0;">  
+  <image src="/../lab7/Beginner_guideline.png" class="fx_img" bindtap="pl_fx"></image>
+</button>
+<!--map-->
+<text class='location'>LOCATION</text>
+
+<view>
+<map id="map"
+longitude="{{longitude}}"
+latitude="{{latitude}}"
+scale="14"
+markers="{{markers}}"
+bindmarkertap="markertap"
+bindregionchange="regionchange"
+show-location
+style="width: 100%; height: 300px;"
+>
+</map>
+</view>
