--- a/miniprogram/miniprogram/pages/othersaccount/othersaccount.wxml
+++ b/miniprogram/miniprogram/pages/othersaccount/othersaccount.wxml
@@ -1,10 +1,14 @@
 <!--pages/othersaccount/othersaccount.wxml-->
 
-<view>
+<view class="container">
   <!-- image and username -->
-  <image class="hisimage" src="{{hisimage}}"></image>
+  <image class="hisimage" src="{{hisimage}}" style="position: relative; left: 94rpx; top: 87rpx"></image>
   <text class="hisname" style="font-weight:bold; font-family:'宋体';">{{hisname}}</text>
-
-  <button bindtap="subscript">Subscript {{hisname}}</button>
+  <view>
+    <image class="subscripthim" src="https://s3.bmp.ovh/imgs/2021/11/d773bb0c1a1575bd.png" style="position: absolute; "></image>
+    <view bindtap="subscript" style="color: dimgray; font-weight: bold; width: 183rpx; height: 50rpx; right: 5%; top: 15%; position: absolute">Subscript{{hisname}}</view>
+  </view>
+  
+  
 </view>
 
