--- a/miniprogram/miniprogram/pages/othersaccount/othersaccount.wxss
+++ b/miniprogram/miniprogram/pages/othersaccount/othersaccount.wxss
@@ -1,25 +1,32 @@
 /* pages/othersaccount/othersaccount.wxss */
-
+.container{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  z-index: -1;
+}
 .hisimage{
   left: 20px;
   top: 20px;
   height: 50px;
   width: 50px;
   position: relative;
-  z-index: -1;
+  z-index: 0;
 }
 
 .hisname{
   left: 28px;
   top: -15px;
   position: relative;
-  z-index: -1;
+  z-index: 0;
 }
 
 .subscripthim{
-  top: -41%;
-  right: 19%;
-  width: 40px;
-  height: 40px;
-  position: absolute;
+  top: 5%;
+  right: 9%;
+  width: 55px;
+  height: 55px;
+  position: relative;
 }
