--- a/miniprogram/miniprogram/pages/2_2team/team.wxml
+++ b/miniprogram/miniprogram/pages/2_2team/team.wxml
@@ -1,5 +1,5 @@
 <!--pages/2_2team/team.wxml-->
-
+<image style="position: fixed; width: 120rpx; height: 120rpx; display: inline-block; box-sizing: border-box; left: 598rpx; top: 938rpx; z-index: 5" src="/../lab7/create.png" />
 <text class="titleform" style="position: relative; left: 36rpx; top: 24rpx">Project</text>
 <view wx:if="{{!searchResult}}">
   <view class='screen' style="width: 300rpx; height: 75rpx; display: flex; box-sizing: border-box; left: 380rpx; top: 15rpx; position: fixed">
@@ -22,15 +22,15 @@
 <!-- 显示全部-->
 <block wx:if="{{screenDown.screen==0}}">
   <text class="subtitleform" style="position: relative; left: 36rpx; top: 47rpx">My project</text>
-  <view wx:for="{{followteamlist}}" wx:key="index1" data-index="{{index}}" bindtap="getmyteamandhop">
-    <view class="groupcard" style="position: relative; left: 64rpx; top: 71rpx; width: 638rpx; height: 186rpx; display: block; box-sizing: border-box">
+  <view wx:for="{{followteamlist}}" wx:key="index1" data-index="{{index}}" bindtap="getmyteam">
+    <view bindtap="todetails" class="groupcard" style="position: relative; left: 66rpx; top: 71rpx; width: 638rpx; height: 186rpx; display: block; box-sizing: border-box">
         <image class="cardimage" style="position: relativey; left: 52rpx; top: 104rpx; width: 202rpx; height: 186rpx; display: inline-block; box-sizing: border-box"></image>
     </view>
     <view class="protect" style="display: block; box-sizing: border-box"></view>
   </view> 
   <text class="subtitleform" style="position: relative; left: 36rpx; top: 47rpx">My follow</text> 
-  <view wx:for="{{myteamlist}}" wx:key="index"  data-index="{{index}}" bindtap="getfollowteamandhop">
-    <view class="groupcard" style="position: relative; left: 66rpx; top: 73rpx; width: 638rpx; height: 186rpx; display: block; box-sizing: border-box">
+  <view wx:for="{{myteamlist}}" wx:key="index"  data-index="{{index}}" bindtap="getfollowteam">
+    <view bindtap="todetails" class="groupcard" style="position: relative; left: 66rpx; top: 73rpx; width: 638rpx; height: 186rpx; display: block; box-sizing: border-box">
         <image class="cardimage" style="position: relativey; left: 52rpx; top: 104rpx; width: 202rpx; height: 186rpx; display: inline-block; box-sizing: border-box"></image>
     </view>
     <view class="protect" style="display: block; box-sizing: border-box"></view>
@@ -39,8 +39,8 @@
 <!--my project-->
 <block wx:if="{{screenDown.screen==1}}">
   <text class="subtitleform" style="position: relative; left: 36rpx; top: 2rpx">Only my project</text>
-  <view wx:for="{{followteamlist}}" wx:key="index" data-index="{{index}}" bindtap="getmyteamandhop">
-    <view class="groupcard" style="position: relative; left: 66rpx; top: 73rpx; width: 638rpx; height: 186rpx; display: block; box-sizing: border-box">
+  <view wx:for="{{followteamlist}}" wx:key="index" data-index="{{index}}" bindtap="getmyteam">
+    <view bindtap="todetails" class="groupcard" style="position: relative; left: 66rpx; top: 73rpx; width: 638rpx; height: 186rpx; display: block; box-sizing: border-box">
         <image class="cardimage" style="position: relativey; left: 52rpx; top: 104rpx; width: 202rpx; height: 186rpx; display: inline-block; box-sizing: border-box"></image>
     </view>
     <view class="protect" style="display: block; box-sizing: border-box"></view>
@@ -49,8 +49,8 @@
 <!--my follow-->
 <block wx:if="{{screenDown.screen==2}}">
   <text class="subtitleform" style="position: relative; left: 36rpx; top: 2rpx">Only my follow</text>
-  <view wx:for="{{myteamlist}}" wx:key="index" data-index="{{index}}" bindtap="getfollowteamandhop">
-    <view class="groupcard" style="position: relative; left: 66rpx; top: 73rpx; width: 638rpx; height: 186rpx; display: block; box-sizing: border-box">
+  <view wx:for="{{myteamlist}}" wx:key="index" data-index="{{index}}" bindtap="getfollowteam">
+    <view bindtap="todetails" class="groupcard" style="position: relative; left: 66rpx; top: 73rpx; width: 638rpx; height: 186rpx; display: block; box-sizing: border-box">
         <image class="cardimage" style="position: relativey; left: 52rpx; top: 104rpx; width: 202rpx; height: 186rpx; display: inline-block; box-sizing: border-box"></image>
     </view>
     <view class="protect" style="display: block; box-sizing: border-box"></view>
