--- a/miniprogram/miniprogram/pages/teamdetails/teamdetails.wxml
+++ b/miniprogram/miniprogram/pages/teamdetails/teamdetails.wxml
@@ -2,17 +2,19 @@
 <image style="position: fixed; width: 120rpx; height: 120rpx; display: block; box-sizing: border-box; left: 490rpx; top: 1043rpx; z-index: 5" src="/../lab7/team1.png" bindtap="hoptomember" />
 <image style="position: fixed; width: 120rpx; height: 120rpx; display: inline-block; box-sizing: border-box; left: 610rpx; top: 1043rpx; z-index: 5" src="/../lab7/edit.png" />
 <view class="groupcard"
-    style="position: relative; left: 29rpx; top: 50rpx; width: 697rpx; height: 230rpx; display: block; box-sizing: border-box">
-    <image style="width: 230rpx; height: 230rpx; display: inline-block; box-sizing: border-box; z-index: 1"></image>
-    <text style="position: relative; left: 0rpx; top: -190rpx">aaaaaaaa</text>
+    style="position: relative; left: 27rpx; top: 50rpx; width: 697rpx; height: 230rpx; display: block; box-sizing: border-box">
+    <image style="width: 230rpx; height: 230rpx; display: inline-block; box-sizing: border-box; z-index: 1" src="{{groupimg}}"></image>
+    <text style="position: relative; left: 0rpx; top: -197rpx; font-size: small">Programname:</text>
+    <text style="position: relative; z-index: 0; left: -215rpx; top: -150rpx; font-size: small">{{groupname}}</text> 
+    <view><text style="position: relative; font-size: small; z-index: 0; top: -153rpx; left: 237rpx">Role: {{Role}}</text></view>
 </view>
 <block>
     <view style="display: flex; flex-direction: row; height: 87rpx; padding: 10px; margin: 10px; width: 697rpx; box-sizing: border-box; position: relative; left: 5rpx; top: 26rpx">
         <view bindtap="showSchedule" style="background-color: #ffffff; width: 326rpx; height: 52rpx; display: block; box-sizing: border-box; position: relative; left: -5rpx; top: 3rpx">
-            <text  style="position: relative; left: 104rpx; top: 5rpx">Schedule</text>
+            <text  style="position: relative; left: 104rpx; top: -3rpx">Schedule</text>
         </view>
         <view bindtap="showcommunity" style="background-color: #ffffff; width: 326rpx; height: 52rpx; display: block; box-sizing: border-box; position: relative; left: -5rpx; top: 3rpx">
-                <text style="position: relative; left: 47rpx; top: 5rpx">Community</text>
+                <text style="position: relative; left: 47rpx; top: -3rpx">Community</text>
         </view>
     </view>
 </block>
@@ -22,22 +24,55 @@
  <view wx:if="{{index<stage}}" style="width: 750rpx; height: 150rpx; display: block; box-sizing: border-box">
  <image style="position: relative; left: 50rpx; top: -113rpx; width: 59rpx; height: 59rpx; display: inline-block; box-sizing: border-box" src="/../lab7/_processing1.png" />
  <image style="position: relative; left: -10rpx; top: 6rpx; width: 59rpx; height: 148rpx; display: inline-block; box-sizing: border-box" src="/../lab7/_processing2.png" />
+ <view>
+ <text style="color: darkgrey; position: relative; left: 106rpx; top: -179rpx">{{procesing[index]}}</text>
+</view>
+<text style="font-size: small; color: darkgrey; position: relative; left: 108rpx; top: -132rpx">{{processtime[index]}}</text>
+<text style="position: relative; left: -32rpx; top: -172rpx; font-size: x-small">{{processingifo[index]}}</text>
  </view>
  <view wx:if="{{index==stage}}" style="width: 750rpx; height: 150rpx; display: block; box-sizing: border-box">
  <image style="position: relative; left: 50rpx; top: -113rpx; width: 59rpx; height: 59rpx; display: inline-block; box-sizing: border-box; z-index: 2;" src="/../lab7/_processing3.png" />
  <image style="position: relative; left: -10rpx; top: 6rpx; width: 59rpx; height: 148rpx; display: inline-block; box-sizing: border-box" src="/../lab7/_processing2.png" />
+ <view>
+ <text style="font-size: larger; color: darkturquoise; position: relative; left: 113rpx; top: -188rpx">{{procesing[index]}}</text>
+</view>
+<text style="color: firebrick; position: relative; left: 108rpx; top: -138rpx">{{processtime[index]}}</text>
+<text style="position: relative; left: -65rpx; top: -190rpx; font-size: x-small">{{processingifo[index]}}</text>
  </view>
- <view wx:if="{{index>stage}}" style="width: 750rpx; height: 150rpx; display: block; box-sizing: border-box">
- <image style="position: relative; left: 50rpx; top: -113rpx; width: 59rpx; height: 59rpx; display: inline-block; box-sizing: border-box; z-index: 2;" src="/../lab7/_processing3.png" />
+ <view wx:if="{{index>stage && index<length-1 }}" style="width: 750rpx; height: 150rpx; display: block; box-sizing: border-box">
+ <image style="position: relative; left: 50rpx; top: -113rpx; width: 59rpx; height: 59rpx; display: inline-block; box-sizing: border-box; z-index: 2;" src="/../lab7/_processing4.png" />
  <image style="position: relative; left: -10rpx; top: 6rpx; width: 59rpx; height: 148rpx; display: inline-block; box-sizing: border-box" src="/../lab7/_processing2.png" />
+ <view>
+ <text style="position: relative; left: 104rpx; top: -176rpx">{{procesing[index]}}</text>
+ </view>
+ <text style="font-size: small; position: relative; left: 110rpx; top: -132rpx">{{processtime[index]}}</text>
+ <text style="position: relative; left: -32rpx; top: -172rpx; font-size: x-small">{{processingifo[index]}}</text>
+ </view>
+ <view wx:if="{{length-1==index}}" style="width: 750rpx; height: 150rpx; display: block; box-sizing: border-box">
+ <image style="position: relative; left: 50rpx; top: -113rpx; width: 59rpx; height: 59rpx; display: inline-block; box-sizing: border-box; z-index: 2;" src="/../lab7/_processing4.png" />
+ <view style="position: relative; left: -10rpx; top: 6rpx; width: 59rpx; height: 148rpx; display: inline-block; box-sizing: border-box" />
+ <view>
+ <text style="position: relative; left: 104rpx; top: -176rpx">{{procesing[index]}}</text>
+ </view>
+ <text style="font-size: small; position: relative; left: 110rpx; top: -135rpx">{{processtime[index]}}</text>
+ <text style="position: relative; left: -32rpx; top: -172rpx; font-size: x-small">{{processingifo[index]}}</text>
  </view>
 </block>
  </view>
 <view wx:if="{{Communityshow==true}}" style=" background: #ffffff; display: block; box-sizing: border-box; left: 0rpx; top: 0rpx">
-    <view style="position: relative; width: 708rpx; background: #d1d1d1; height: 366rpx; display: block; box-sizing: border-box; left: 22rpx; top: 5rpx"></view>
-    <view style="position: relative; width: 298rpx; background: #d1d1d1; height: 270rpx; display: block; box-sizing: border-box; left: 22rpx; top: 31rpx"></view>
-    <view style="position: relative; width: 387rpx; background: #d1d1d1; height: 814rpx; display: block; box-sizing: border-box; left: 343rpx; top: -240rpx"></view>
-    <view style="position: relative; width: 298rpx; background: #d1d1d1; height: 521rpx; display: block; box-sizing: border-box; left: 22rpx; top: -760rpx"></view>
+    <view style="border-radius: 15px; ;position: relative; width: 718rpx; background: #9fb8e7; height: 202rpx; display: block; box-sizing: border-box; left: 22rpx; top: 5rpx">
+    <view><text style="position: relative; left: 22rpx; top: 5rpx">Announcement:</text></view>
+    <text>announcement</text>
+    </view>
+    <view style="border-radius: 15px;position: relative; width: 298rpx; background: #fffecb; height: 202rpx; display: block; box-sizing: border-box; left: 22rpx; top: 31rpx">
+    <text>Communication channel</text>
+    </view>
+    <view style="border-radius: 15px;position: relative; width: 383rpx; background: #cfebf0; height: 486rpx; display: block; box-sizing: border-box; left: 357rpx; top: -172rpx">
+    <text>Version feedback</text>
+    </view>
+    <view style="border-radius: 15px;position: relative; width: 298rpx; background: #b8b8b8; height: 244rpx; display: block; box-sizing: border-box; left: 22rpx; top: -415rpx">
+    <text>Next version perview</text>
+    </view>
 </view>
 </block>
 
