--- a/miniprogram/miniprogram/pages/2_2team/team.wxml
+++ b/miniprogram/miniprogram/pages/2_2team/team.wxml
@@ -1,5 +1,5 @@
 <!--pages/2_2team/team.wxml-->
-<image style="position: fixed; width: 120rpx; height: 120rpx; display: inline-block; box-sizing: border-box; left: 598rpx; top: 938rpx; z-index: 5" src="/../lab7/create.png" />
+<image bindtap="show" style="position: fixed; width: 120rpx; height: 120rpx; display: inline-block; box-sizing: border-box; left: 598rpx; top: 938rpx; z-index: 5" src="/../lab7/create.png" />
 <text class="titleform" style="position: relative; left: 36rpx; top: 24rpx">Project</text>
 <view wx:if="{{!searchResult}}">
   <view class='screen' style="width: 300rpx; height: 75rpx; display: flex; box-sizing: border-box; left: 380rpx; top: 15rpx; position: fixed">
@@ -22,14 +22,14 @@
 <!-- 显示全部-->
 <block wx:if="{{screenDown.screen==0}}">
   <text class="subtitleform" style="position: relative; left: 36rpx; top: 47rpx">My project</text>
-  <view wx:for="{{followteamlist}}" wx:key="index1" data-index="{{index}}" bindtap="getmyteam">
+  <view wx:for="{{myteamlist}}" wx:key="index1" data-index="{{index}}" bindtap="getmyteam">
     <view bindtap="todetails" class="groupcard" style="position: relative; left: 66rpx; top: 71rpx; width: 638rpx; height: 186rpx; display: block; box-sizing: border-box">
         <image class="cardimage" style="position: relativey; left: 52rpx; top: 104rpx; width: 202rpx; height: 186rpx; display: inline-block; box-sizing: border-box"></image>
     </view>
     <view class="protect" style="display: block; box-sizing: border-box"></view>
   </view> 
   <text class="subtitleform" style="position: relative; left: 36rpx; top: 47rpx">My follow</text> 
-  <view wx:for="{{myteamlist}}" wx:key="index"  data-index="{{index}}" bindtap="getfollowteam">
+  <view wx:for="{{followteamlist}}" wx:key="index"  data-index="{{index}}" bindtap="getfollowteam">
     <view bindtap="todetails" class="groupcard" style="position: relative; left: 66rpx; top: 73rpx; width: 638rpx; height: 186rpx; display: block; box-sizing: border-box">
         <image class="cardimage" style="position: relativey; left: 52rpx; top: 104rpx; width: 202rpx; height: 186rpx; display: inline-block; box-sizing: border-box"></image>
     </view>
@@ -56,7 +56,28 @@
     <view class="protect" style="display: block; box-sizing: border-box"></view>
   </view> 
 </block>
-
+    <view class='toast-box' hidden='{{!show}}'>
+        <view class='toastbg'></view>
+        <view class='showToast'>
+            <view class='toast-title'>
+                <text>enter groupname</text>
+            </view>
+            <view class='toast-main'>
+                <view class='toast-input'>
+                    <input placeholder='please enter groupname' bindinput='setValue' data-name='stuEidtName'>
+                    </input>
+                </view>
+            </view>
+            <view class='toast-button'>
+                <view class='button1'>
+                    <button catchtap='show' style="width: 263rpx; height: 94rpx; display: block; box-sizing: border-box; left: 0rpx; top: 0rpx">取消</button>
+                </view>
+                <view class='button2'>
+                    <button catchtap='compare' bindtap="confirm" style="position: relative; left: -8rpx; top: -5rpx; width: 270rpx; height: 99rpx; display: block; box-sizing: border-box">确定</button>
+                </view>
+            </view>
+        </view>
+    </view>
 
 
 
