--- a/miniprogram/miniprogram/pages/2_2team/team.wxss
+++ b/miniprogram/miniprogram/pages/2_2team/team.wxss
@@ -94,5 +94,104 @@
   height: 20rpx;
   width: 582rpx; 
 }
-  
+.up{
+  position: absolute;
+  z-index: 1;
+}
+.toast-box {
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 2;
+}
+
+.toastbg {
+  opacity: 0.2;
+  background-color: black;
+  position: absolute;
+  width: 100%;
+  min-height: 100vh;
+  z-index: 2;
+}
+
+.showToast {
+  position: absolute;
+  opacity: 1;
+  width: 70%;
+  margin-left: 15%;
+  margin-top: 40%;
+  z-index: 2;
+}
+
+.toast-title {
+  padding-left: 5%;
+  background-color: #2196f3;
+  color: white;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+  border-top-right-radius: 16rpx;
+  border-top-left-radius: 16rpx;
+  z-index: 2;
+}
+
+.toast-main {
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+  background-color: white;
+  text-align: center;
+  z-index: 2;
+}
+
+.toast-input {
+  margin-left: 5%;
+  margin-right: 5%;
+  border: 1px solid #ddd;
+  padding-left: 2vh;
+  padding-right: 2vh;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  z-index: 2;
+}
+
+.toast-button {
+  display: flex;
+  z-index: 2;
+}
+
+.button1 {
+  width: 50%;
+  z-index: 2;
+}
+
+.button2 {
+  width: 50%;
+  z-index: 2;
+}
+
+.button1 button {
+  width: 100%;
+  background-color: white;
+  color: red;
+  border-radius: 0px;
+  border-bottom-left-radius: 16rpx;
+  z-index: 2;
+}
+
+.button2 button{
+  width: 100%;
+  background-color: white;
+  color: black;
+  border-radius: 0px;
+  border-bottom-right-radius: 16rpx;
+  z-index: 2;
+}
+
+.picker {
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  z-index: 2;
+}
 
